--- a/templates/messages.html
+++ b/templates/messages.html
@@ -3,18 +3,19 @@
 {% load cloudinary %}
 
 {% block content %}
-<section>
-  <div class="container d-flex flex-column justify-content-center">
-    <div class="row justify-content-center">
-      <div class="d-flex justify-content-center col-md-12 mt-xl-0 mt-xl-3">
-        <!-- div that React will render in -->
-        <div class="col-12 col-md-10 col-lg-8 col-xl-6" id="js-framework-home"></div>
-        {{ name|json_script:'name' }}
-        {{ id|json_script:'id' }}
-        <!-- bundle file with JavaScript application logic -->
-        <script src="{% static 'chat.js-bundle.js' %}"></script>
+<main>
+  <div id="messenger">
+    <div class="container d-flex flex-column justify-content-center">
+      <div class="row justify-content-center">
+        <div class="d-flex justify-content-center col-md-12 mt-xl-0 mt-xl-3">
+          <!-- div that React will render in -->
+          <div class="col-12 col-md-10 col-lg-8 col-xl-6" id="js-framework-home"></div>
+          {{ name|json_script:'name' }}
+          {{ id|json_script:'id' }}
+          <!-- bundle file with JavaScript application logic -->
+          <script src="{% static 'chat.js-bundle.js' %}"></script>
+        </div>
       </div>
     </div>
   </div>
-</section>
 {% endblock %}
