--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,7 +3,8 @@
 {% load cloudinary %}
 
 {% block content %}
-<section id="profile">
+<main id="main">
+  <section id="profile">
     <div class="container d-flex flex-column justify-content-center mt-5">
         <div class="row">
           <!-- profile userpic -->
@@ -67,7 +68,7 @@
             </div>
         </div>
     </div>
-</section>
+  </section>
 
 {% endblock %}
 
