--- a/templates/delete.html
+++ b/templates/delete.html
@@ -3,19 +3,21 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<section>
-    <div class="row">
-        <div class="col-md-12 d-flex flex-column text-center justify-content-center mt-lg-3 mt-md-5 mt-5 mb-4">
-            <a href="{% url 'main:full' post.slug %}" class="btn link-primary mb-3 mt-1"><<< Back to the post</a>
+<main>
+    <section>
+        <div class="row">
+            <div class="col-md-12 d-flex flex-column text-center justify-content-center mt-lg-3 mt-md-5 mt-5 mb-4">
+                <a href="{% url 'main:full' post.slug %}" class="btn link-primary mb-3 mt-1">&lt;&lt;&lt; Back to the post</a>
+            </div>
+            <!-- confirm deleting -->
+            <div class="col-md-12 d-flex flex-column text-center justify-content-center mt-lg-3 mt-md-5 mt-5 mb-4">
+                <h2>Are you sure you want to delete this post?</h2>
+                <form method="post" class="mt-5">
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                    <button type="submit" class="btn btn-primary mb-2 mt-2 px-5">Delete</button>
+                </form>
+            </div>
         </div>
-        <!-- confirm deleting -->
-        <div class="col-md-12 d-flex flex-column text-center justify-content-center mt-lg-3 mt-md-5 mt-5 mb-4">
-            <h2>Are you sure you want to delete this post?</h2>
-            <form method="post" class="mt-5">
-                {% csrf_token %}
-                {{ form|crispy }}
-                <button type="submit" class="btn btn-primary mb-2 mt-2 px-5">Delete</button>
-            </form>
-        </div>
-</section>
+    </section>
 {% endblock content %}
