--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
           src="{% static 'assets/img/logo.png' %}"
           alt="logo - yellow and blue heart made of leaves"
         >
-        <h1>People for people</h1>
+        <h2 id="slogan">People for people</h2>
         <h2>We connect the ones who can help with the ones who need it</h2>
       </div>
     </div>
