--- a/templates/posts_list.html
+++ b/templates/posts_list.html
@@ -3,13 +3,12 @@
 {% load cloudinary %}
 
 {% block content %}
-<section id="search">
+<div id="search">
     <div class="container position-relative" data-aos="fade-down" data-aos-duration="500">
         <div class="row justify-content-center">
             <div class="col-xl-7 col-lg-9 text-center">
                 <img class="search-logo my-4" src="{% static 'assets/img/logo.png' %}"
-                    alt="logo - yellow and blue heart made of leaves"
-                    height="140px" width="auto">
+                    alt="logo - yellow and blue heart made of leaves">
                 <!-- search bar -->
                 <div class="input-group">
                     <input id="search-input" name="q" type="search" class="form-control" placeholder="Search">
@@ -32,14 +31,17 @@
                 </div>
             </div>
         </div>
-</section>
+    </div>
+</div>
+<main id="main">
+
 <section id="listings">
 
         {% include 'posts.html' %}
 
 </section>
 <!-- handle checking/uncheking checkboxes -->
-<script type="text/javascript">
+<script>
     $('#receive').on('change', function () {
         if ($(this).not(':checked') && ($('#give').is(':checked'))) {
             document.location.href = "{% url 'main:posts_list' 'give' %}"
